// Copyright 2018 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package content.proto;

// Proto equivalent of network::mojom::CookieMatchType. Values must match.
enum CookieMatchType {
  EQUALS = 0;
  STARTS_WITH = 1;
}

// A single cookie change subscription.
message CookieChangeSubscriptionProto {
  string url = 1;
  string name = 2;
  CookieMatchType match_type = 3;
}

// All cookie change subscriptions belonging to a service worker registration.
message CookieChangeSubscriptionsProto {
  repeated CookieChangeSubscriptionProto subscriptions = 1;
}
